Fixed minor issues with menubars (z-index was below notes / hover animation not working on small desktop size)

--- a/src/components/MenuBars/MenuBars.scss
+++ b/src/components/MenuBars/MenuBars.scss
@@ -1,5 +1,9 @@
 @import 'constants/style.scss';
 
+.menu {
+  z-index: $menu-z-index;
+}
+
 @media screen and (max-width: 1343px){
   .menu-bars {
     position: fixed;
